@@ -12,6 +12,7 @@
     to be pixel-perfect)
   - added IsLayerReflective and SetLayerReflective (Brian Robb)
   - fix GetCurrentMap() in map entry scripts
+  - don't crash when loading a corrupt spriteset
 
 2003.01.29
   - make ExecuteGame work no matter where the game calling it is
